include 'Recipe.thrift'


namespace java com.foodRecipe.core.thrift.service
namespace cocoa foodRecipe

service RecipeAPI{
	//search

	//insert

	//remove

}
